--- a/ConsoleApplicationParceAttribute/ConsoleApplicationParceAttribute.csproj
+++ b/ConsoleApplicationParceAttribute/ConsoleApplicationParceAttribute.csproj
@@ -43,7 +43,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\MapAttribute.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="T4 Folder\MappingExtension.cs">
@@ -67,6 +66,16 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataObjects\DataObject.csproj">
+      <Project>{e04ba799-3902-4557-b378-f91c0d727f7b}</Project>
+      <Name>DataObject</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DataTransferObject\DataTransferObject.csproj">
+      <Project>{c8117d1d-bb87-4b18-9783-714b6ed6c6b5}</Project>
+      <Name>DataTransferObject</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
