--- a/DataObjects/DataObject.csproj
+++ b/DataObjects/DataObject.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\MapAttribute.cs" />
+    <Compile Include="Attributes\ObservableRangeCollection.cs" />
     <Compile Include="News.cs" />
     <Compile Include="NewsCategory.cs" />
     <Compile Include="NewsToTags.cs" />
